<resources>
    <string name="app_name">Calculator</string>
    <string name="enter_first_number">Enter First Number</string>
    <string name="enter_second_number">Enter Second Number</string>
    <string name="add">%s</string>
    <string name="sub">%s</string>
    <string name="div">%s</string>
    <string name="calculate">Calculate</string>
    <string name="addition">Addition: </string>
    <string name="division">Division: </string>
    <string name="subtract">Subtract: </string>
</resources>