<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="25dp">

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/tfFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="Enter First Number"
        android:hint="@string/enter_first_number">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/tf1First"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/tfSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tfFirst"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="Enter Second Number"
        android:hint="@string/enter_second_number"
        android:layout_marginTop="25dp">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/tf2Second"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="#616161">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView

        android:id="@+id/tvAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tfSecond"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="25dp"
        android:textSize="20sp"
        tools:text="@string/add">

    </TextView>

    <TextView

        android:id="@+id/tvSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="25dp"
        android:textSize="20sp"
        tools:text="@string/sub">

    </TextView>

    <TextView

        android:id="@+id/tvDiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSub"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="25dp"
        android:textSize="20sp"
        tools:text="@string/div">

    </TextView>

    <Button

        android:id="@+id/btnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/calculate"
        android:textSize="24sp"
        android:background="@drawable/roundstyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDiv">

    </Button>

    <TextView

        android:id="@+id/tvAdd1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/tvAdd"
        app:layout_constraintTop_toBottomOf="@+id/tfSecond"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/addition"
        android:layout_margin="25dp"
        android:textSize="20sp">

    </TextView>

    <TextView

        android:id="@+id/tvMin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/tvSub"
        app:layout_constraintTop_toBottomOf="@+id/tvAdd1"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/subtract"
        android:layout_margin="25dp"
        android:textSize="20sp">

    </TextView>

    <TextView

        android:id="@+id/tvDiv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/tvDiv"
        app:layout_constraintTop_toBottomOf="@+id/tvMin1"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/division"
        android:layout_margin="25dp"
        android:textSize="20sp">

    </TextView>

  </androidx.constraintlayout.widget.ConstraintLayout>